# CSC.test

./: CMakeLists.txt  build.bat  clean.bat  log.txt  notes.txt  test-mingw.bat  test-nmake.bat  test-vc.bat
Helloworld/: CMakeLists.txt  Helloworld.cs
Math/: CMakeLists.txt  Math.cs
TestMath/: CMakeLists.txt  TestMath.cs
