CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TestCSC CSC)

SET(CMAKE_VERBOSE_MAKEFILE 1)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})

# Test an assembly (Math) linked against a executable (TestMath)
ADD_SUBDIRECTORY(Math)
ADD_SUBDIRECTORY(TestMath)

ADD_SUBDIRECTORY(Helloworld)
